# trajViewer_rust

./: Cargo.toml  README.md  data
docs/: README.md
src/: lib.rs  main.rs
