[package]
name = "traj_viewer"
version = "0.1.0"
edition = "2021"
authors = ["Sung-Cheol Kim <sungcheol.kim78@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.52.0"
aws-sdk-s3 = "0.22.0"
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
linya = "0.3.0"
plotters = "0.3.4"
polars = { version = "0.26.0", features = ["decompress", "lazy", "csv-file", "dtype-datetime", "ndarray", "interpolate"] }
tokio = { version = "1", features = ["full"] }
ndarray = "0.15.6"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
